fix: sync z-index for github tree and hover overlay (#278)
Closes https://github.com/sourcegraph/sourcegraph/issues/242.

--- a/src/shared/tree/tree.scss
+++ b/src/shared/tree/tree.scss
@@ -1,8 +1,10 @@
+@import '../global-styles/variables.scss';
+
 .tree-mount {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2000;
+    z-index: $default-z-index - 1;
     width: 100%;
     pointer-events: none;
     height: 100%;
